<resources>
    <string name="app_name">tErznica</string>
    <string name="action_settings">Postavke</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_products">Pretraži proizvode</string>
    <string name="log_out">Odjavi se</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="log_in">Prijava</string>
    <string name="register">Registracija</string>
    <string name="data_entry_description">Molimo Vas da ispunite polja svojim osobnim podacima</string>
    <string name="name">Ime</string>
    <string name="surname">Prezime</string>
    <string name="mail_address">Mail adresa</string>
    <string name="phone_number">Broj telefona</string>
    <string name="confirm_password">Potvrdite lozinku</string>
    <string name="back">Natrag</string>
    <string name="next">Dalje</string>
    <string name="buyer_registration_description">Korisnici s ulogom kupca mogu pretraživati proizvode OPG-ova, slati im upite za kupoprodaju i dogovarati prijevoz nabavljene robe. Želite li imati ulogu kupca?</string>
    <string name="register_buyer_check">Registriraj me kao kupca</string>
    <string name="vendor_registration_description">Korisnici s ulogom OPG-a mogu postavljati oglase svojih proizvoda i dogovarati se s kupcima o njihovoj prodaji. Želite li registrirati OPG?</string>
    <string name="register_vendor_check">Registriraj OPG</string>
    <string name="driver_registration_description">Korisnici s ulogom prijevoznika mogu odgovarati na zahtjeve kupaca za prijevozom kupljenih dobara i dogogvarati se s njima za prijevoz. Želite li se registrirati kao prijevoznik?</string>
    <string name="register_driver_check">Registriraj me kao prijevoznika</string>
    <string name="finish_registration_description">Odlično, registracija je gotova! Vaš zahtjev će se poslati administratorima na potvrdu</string>
    <string name="done">Gotovo</string>
    <string name="add_address">Dodaj adresu</string>
    <string name="vendor_name">Naziv OPG-a</string>
    <string name="vendor_id">OIB OPG-a</string>
    <string name="google_api_key">AIzaSyDo-ci490dgXDV_hOQh8R3WSCFZVpsUWPw</string>
    <string name="vendor_short_description">Kratak opis OPG-a</string>
    <string name="iban">Broj računa u IBAN obliku</string>
    <string name="choose_image">Odaberite sliku</string>
    <string name="add">Dodaj</string>
    <string name="registration">Registarska oznaka</string>
    <string name="vehicle_model">Model vozila</string>
    <string name="description">Opis</string>
    <string name="categories">Kategorije</string>
    <string-array name="vehicle_categories">
        <item>AM</item>
        <item>A1</item>
        <item>A2</item>
        <item>A</item>
        <item>B1</item>
        <item>B</item>
        <item>C1</item>
        <item>C</item>
        <item>D1</item>
        <item>D</item>
        <item>BE</item>
        <item>C1E</item>
        <item>CE</item>
        <item>D1E</item>
        <item>DE</item>
        <item>F, G</item>
        <item>H</item>
    </string-array>
    <string name="hostname">165.227.175.217</string>
    <string name="add_a_vehicle">Dodaj vozilo</string>
    <string name="departure">Polazište: </string>
    <string name="destination">Odredište: </string>
    <string name="make_contact">Kontaktiraj</string>
    <string name="search">Pretraži</string>
    <string name="product_name">Naziv</string>
    <string name="quantity">Količina</string>
    <string name="price">Cijena</string>
    <string name="write_a_message">Napišite poruku...</string>
    <string name="visit_profile">Posjeti profil</string>
    <string name="request_transport">Zatraži prijevoz</string>
</resources>
