<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:text="@string/data_entry_description"
        android:gravity="center"
        android:textSize="@dimen/font_large"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <EditText
        android:layout_width="@dimen/log_in_width"
        android:layout_height="@dimen/edit_text_height"
        android:theme="@style/WelcomeEditText"
        android:id="@+id/f_register_general_name"
        android:hint="@string/name"/>

    <EditText
        android:layout_width="@dimen/log_in_width"
        android:layout_height="@dimen/edit_text_height"
        android:theme="@style/WelcomeEditText"
        android:id="@+id/f_register_general_surname"
        android:hint="@string/surname"/>

    <EditText
        android:layout_width="@dimen/log_in_width"
        android:layout_height="@dimen/edit_text_height"
        android:theme="@style/WelcomeEditText"
        android:id="@+id/f_register_general_mail"
        android:hint="@string/mail_address"/>

    <EditText
        android:layout_width="@dimen/log_in_width"
        android:layout_height="@dimen/edit_text_height"
        android:theme="@style/WelcomeEditText"
        android:id="@+id/f_register_general_phone"
        android:inputType="phone"
        android:hint="@string/phone_number"/>

    <LinearLayout
        android:layout_width="@dimen/log_in_width"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_weight="1"
            android:theme="@style/WelcomePassword"
            android:hint="@string/password"
            android:id="@+id/f_register_general_password"/>

        <ImageView
            android:layout_width="@dimen/edit_text_height"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/f_register_general_password_img"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/log_in_width"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_weight="1"
            android:theme="@style/WelcomePassword"
            android:hint="@string/confirm_password"
            android:id="@+id/f_register_general_confirm"/>

        <ImageView
            android:layout_width="@dimen/edit_text_height"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/f_register_general_confirm_img"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/log_in_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="#FFF"
            android:background="@color/colorPrimary"
            android:id="@+id/f_register_general_back"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:background="#FFF"
            android:id="@+id/f_register_general_next"/>

    </LinearLayout>

</LinearLayout>