<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorPrimary">

    <EditText
        android:layout_width="@dimen/log_in_width"
        android:layout_height="wrap_content"
        style="@style/WelcomeEditText"
        android:id="@+id/f_new_vehicle_registration"
        android:hint="@string/registration"/>

    <EditText
        android:layout_width="@dimen/log_in_width"
        android:layout_height="wrap_content"
        style="@style/WelcomeEditText"
        android:id="@+id/f_new_vehicle_model"
        android:hint="@string/vehicle_model"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textSize="@dimen/font_large"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/f_new_vehicle_category"
            android:paddingLeft="15dp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/f_new_vehicle_image"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="@dimen/log_in_width"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/BlueButton"
            android:id="@+id/f_new_vehicle_back"
            android:text="@string/back"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/WhiteButton"
            android:id="@+id/f_new_vehicle_add"
            android:text="@string/add"/>

    </LinearLayout>

</LinearLayout>