<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/finish_registration_description"
            android:gravity="center"
            android:textSize="@dimen/font_large"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="180dp"/>

        <LinearLayout
            android:layout_width="@dimen/log_in_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingBottom="30dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                style="@style/BlueButton"
                android:id="@+id/f_register_finish_back"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done"
                style="@style/WhiteButton"
                android:id="@+id/f_register_finish_done"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>