<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/d_product_edit_image"
        android:background="@color/paleBlue"/>

    <LinearLayout
        android:layout_width="@dimen/log_in_width"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/product_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/d_product_edit_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/log_in_width"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/description"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/d_product_edit_description"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/log_in_width"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/product_name"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/d_product_edit_categories"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/log_in_width"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/price"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/d_product_edit_price"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/log_in_width"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/WhiteButton"
            android:id="@+id/d_product_edit_left"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/BlueButton"
            android:id="@+id/d_product_edit_right"/>

    </LinearLayout>

</LinearLayout>